More spacing fixes

--- a/stylesheets/menu.css
+++ b/stylesheets/menu.css
@@ -69,6 +69,7 @@ body{
 #dish p{
     /* margin-bottom: 0.25rem; */
     margin-bottom: 0;
+    /* margin-bottom: 0.5rem; */
 }
 
 #extra_space{
@@ -100,8 +101,12 @@ body{
     h5{
         font-size: 1rem;
     }
+
     p{
         font-size: 0.75rem;
 
+    }
+    #dish p{
+        margin-bottom: 0.5rem;
     }
 }
